add new api to update user
